# agarust

./: .gitignore  README.md
client/: export_presets.cfg  icon.png.import  main.gd  main.tscn  project.godot  proto.gd  proto.gd.uid
client/addons/protobuf/: parser.gd  parser.gd.uid  plugin.cfg  protobuf_cmdln.gd  protobuf_cmdln.gd.uid  protobuf_core.gd  protobuf_core.gd.uid  protobuf_ui.gd  protobuf_ui.gd.uid  protobuf_ui_dock.gd  protobuf_ui_dock.gd.uid  protobuf_ui_dock.tscn  protobuf_util.gd  protobuf_util.gd.uid
client/assets/: SmileySans-Oblique.ttf.import  SmileySans-Oblique.ttf.woff2.import  background.svg.import  background_effect.gdshader  background_effect.gdshader.uid  blob.png.import  floor.svg.import  icon.png.import  rainbow.gdshader  rainbow.gdshader.uid
client/component/actor/: actor.gd  actor.gd.uid  actor.tscn
client/component/leaderboard/: leaderboard.gd  leaderboard.gd.uid  leaderboard.tscn
client/component/logger/: logger.gd  logger.gd.uid  logger.tscn
client/component/ping/: ping.gd  ping.gd.uid  ping.tscn
client/component/rush_particles/: rush_particles.tscn
client/component/spore/: spore.gd  spore.gd.uid  spore.tscn
client/global/: global.gd  global.gd.uid  vfx_pre_compile.tscn  ws_client.gd  ws_client.gd.uid
proto/: packet.proto
server/: .env  .gitignore  Cargo.toml  README.md  build.rs  cross_build_linux.bat  sqlx_migrate.bat
server/migrations/: 20250113000000_create_table.sql
server/src/: client_agent.rs  command.rs  db.rs  hub.rs  lib.rs  main.rs  player.rs  proto.rs  proto_util.rs  spore.rs  util.rs
(+18 files in other folders)
