[package]
name = "agarust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "*"
tracing-subscriber = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "*"
nanoid = "*"

[build-dependencies]
prost-build = "*"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
