[package]
edition = "2024"
name = "agarust-server"
version = "0.1.0"

[dependencies]
anyhow = "*"
bcrypt = "*"
bytes = "*"
dotenv = "*"
futures-util = "*"
hashbrown = "*"
nanoid = "*"
prost = "*"
rand = "*"
sqlx = {version = "*", features = ["runtime-tokio", "sqlite"]}
tokio = {version = "*", features = ["full"]}
tokio-tungstenite = "*"
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"

[build-dependencies]
prost-build = "*"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
